# intelligence-module-ocei

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  bentofile.yaml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
compose/: intelligence.demo.yaml  intelligence.yaml  prometheus.yml
docs/: energy-walkthrough.md  getting-started.md
examples/: README.md
examples/cpu_forecast/: README.md  config.yaml
examples/energy_forecast/: README.md  config.yaml
examples/energy_forecast/k8s/: secret.example.yaml  synthetic-stack.yaml  values-walkthrough.yaml  values-with-xgb.yaml
examples/k8s_cluster_metrics/: README.md  config.yaml
examples/mem_forecast/: README.md  config.yaml
helm/intelligence/: .helmignore  Chart.yaml  README.md  values.yaml
helm/intelligence/ci/: e2e-values.yaml  full-values.yaml  minimal-values.yaml  prom-stack.yaml
helm/intelligence/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
oasis/: api_service.py  api_train.py
oasis/analytics/: model_metrics.py
oasis/models/arima/: arima_compiler.py
oasis/models/pytorch/: pytorch_compiler.py
oasis/models/xgboost/: xgboost_compiler.py
oasis/processing/: process.py
oasis/tai/: model_explainability.py
src/intelligence/: __init__.py
src/intelligence/adapters/: __init__.py  dataclay_client.py
src/intelligence/api/: __init__.py  auth.py  model_repo.py  observability.py  schemas.py  service.py
src/intelligence/config/: __init__.py  settings.py
src/intelligence/contracts/: __init__.py  input_spec.py
src/intelligence/data/: __init__.py
src/intelligence/ml/: __init__.py
src/intelligence/ml/artifact/: __init__.py  manifest.py  sidecars.py  store.py
src/intelligence/ml/models/: __init__.py  _common.py  arima.py  base.py  drift.py  lstm.py  xgb.py
src/intelligence/ml/trainers/: __init__.py  _mlflow.py  base.py  lstm.py  metrics.py
src/intelligence/models/: __init__.py  arima.py  base.py
src/intelligence/tasks/: __init__.py  base.py  bootstrap.py  catalog.py  drift.py  forecast.py  loaders.py
src/intelligence/tasks/builders/: __init__.py  _common.py  arima.py  drift.py  lstm.py  xgb.py
src/intelligence/tasks/contracts/: __init__.py  input_spec.py
src/intelligence/telemetry/: __init__.py  base.py  prometheus.py  static.py
src/intelligence/trainers/: __init__.py  base.py  lstm.py  metrics.py
src/intelligence/utils/: columns.py
test/api/: model_training.py
tests/: _synthetic.py  conftest.py
tests/integration/: test_api_endpoints.py  test_auth.py  test_bootstrap.py  test_config_loading.py  test_delete_version_endpoint.py  test_lazy_loading.py  test_models_sync_endpoint.py  test_observability.py  test_task_registry.py  test_versions_endpoint.py
tests/smoke/: test_e2e.py  test_stress.py
tests/unit/: test_arima_model.py  test_artifact_store.py  test_base_task.py  test_bento_verification.py  test_dataclay_isolation.py  test_drift_model.py  test_drift_task.py  test_endpoint_override.py  test_input_spec.py  test_loader_factory.py  test_loaders.py  test_lstm_model.py  test_manifest.py  test_mlflow_no_side_effects.py  test_model_repo.py  test_model_trainer.py  test_multi_horizon.py  test_predict_version_pinning.py  test_project_structure.py  test_prometheus_source.py  test_sidecars.py  test_task_builders.py  test_task_instance_config.py  test_telemetry_source.py  test_xgb_model.py
