[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "intelligence"
version = "0.1.0.dev0"
description = "AI coordination utility for the edge-cloud continuum (CeADAR fork of icos-project/intelligence-module)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "CeADAR Ireland" },
]

dependencies = [
  "bentoml==1.1.11",
  "pandas>=1.5.3",
  "numpy>=1.24.4,<2",
  "scikit-learn>=1.6.1",
  "scipy>=1.10.1",
  "statsmodels>=0.14.0",
  "xgboost==1.7.6",  # 2.x segfaults on macOS arm64 during numpy interop; pin stays until upstream fixes it
  "torch>=2.5.1",
  "shap>=0.46.0",
  "nannyml>=0.13.0",
  "mlflow>=2.22.0",
  "huggingface_hub>=0.20",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "fastapi>=0.100",  # path-param routing for /tasks/{task}/...
  "requests>=2.31",
  "tqdm>=4.65.0",
  "matplotlib>=3.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "httpx",  # ASGI test client for the BentoML service
]

[tool.uv]
# nannyml pins kaleido==0.2.1.post1, which has no ARM-Mac wheel.
# Forcing a newer kaleido that does until nannyml moves behind an
# optional [drift] extra.
override-dependencies = ["kaleido>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence"]

[tool.hatch.build.targets.wheel.force-include]
"src/intelligence/data/samples" = "intelligence/data/samples"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length is enforced by the formatter
  "B008",   # FastAPI/BentoML use Depends(...) defaults pervasively
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802", "N803"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Smoke tests need a running compose stack — excluded by default. Run with
# `pytest -m smoke` (or `make smoke` / `make e2e`).
addopts = "-ra --strict-markers --strict-config -m 'not smoke'"
markers = [
  "integration: spins up the BentoML service in-process; slower",
  "slow: takes more than ~5 seconds",
  "smoke: end-to-end against a running compose stack; requires docker compose up",
]
filterwarnings = [
  "error",
  # statsmodels/sklearn raise a lot of FutureWarnings on the pinned versions
  "ignore::FutureWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",  # bentoml -> multipart -> python_multipart rename
  "ignore::UserWarning",
]
