[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "icos-intelligence-ocei"
version = "0.1.0"
description = "CeADAR fork of icos-project/intelligence-module, adapted for the O-CEI continuum: forecasting and drift detection against generic Prometheus telemetry"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "CeADAR Ireland" },
]

dependencies = [
  "bentoml>=1.4.39,<2.0",  # bumped from ==1.1.11 to clear 9 CVE findings; the legacy Service constructor moved to bentoml.legacy in 1.2
  "pandas>=1.5.3",
  "numpy>=1.24.4,<2",
  "scikit-learn>=1.6.1",
  "scipy>=1.10.1",
  "statsmodels>=0.14.0",
  "xgboost==1.7.6",  # 2.x segfaults on macOS arm64 during numpy interop; pin stays until upstream fixes it
  "torch>=2.5.1",
  "safetensors>=0.4",  # state_dict persistence for LSTM (pickle-free)
  "huggingface_hub>=0.20",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "fastapi>=0.100",  # path-param routing for /tasks/{task}/...
  "requests>=2.31",
  "tqdm>=4.65.0",
  "prometheus-client>=0.20",   # /metrics endpoint + counter/histogram instrumentation
]

[project.optional-dependencies]
# Install with `uv sync --extra <name>`. Pilots opt in to the heavy bits
# they actually use — none of these are required by the four shipped
# tasks. The base install + Docker image stay lean.
explain = [
  # SHAP explanations. Reserved for re-introducing the explainability
  # paths from the original ICOS / OASIS codebase. Not yet wired into
  # any API endpoint.
  "shap>=0.46.0",
]
drift = [
  # NannyML drift detection — required for any task with `kind: drift`.
  # Pulls plotly + kaleido + matplotlib transitively (~300 MB of image).
  # Pilots who don't run drift tasks should leave this out.
  "nannyml>=0.13.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "httpx",  # ASGI test client for the BentoML service
  "nannyml>=0.13.0",  # drift tests need it; dev install includes drift by default
]

[tool.uv]
# nannyml pins kaleido==0.2.1.post1, which has no ARM-Mac wheel.
# Forcing a newer kaleido that does until nannyml moves behind an
# optional [drift] extra.
#
# lightgbm pulled in transitively by nannyml -> flaml[automl]. 4.5.0
# has PYSEC-2024-231; 4.6.0 fixes it.
override-dependencies = ["kaleido>=1.0", "lightgbm>=4.6.0"]

# Pull torch from the CPU-only PyTorch index. Without this, the default
# resolution drags in the NVIDIA CUDA stack (nvidia-cublas, cudnn, triton,
# numba, …) — useless on a CPU-only image and ~2.5 GB of bloat.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence"]

[tool.hatch.build.targets.wheel.force-include]
"src/intelligence/data/samples" = "intelligence/data/samples"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length is enforced by the formatter
  "B008",   # FastAPI/BentoML use Depends(...) defaults pervasively
  "N818",   # exception suffix — ContractViolation reads better as a domain term
]

[tool.ruff.lint.per-file-ignores]
# ML naming convention: `X`, `X_train`, `X_batch`, `y_train` etc. are
# standard everywhere torch/sklearn/xgboost is used; lowercasing them
# would obscure rather than clarify.
"src/intelligence/ml/*" = ["N803", "N806"]
"tests/*" = ["B011", "N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Smoke tests need a running compose stack — excluded by default. Run with
# `pytest -m smoke` (or `make smoke` / `make e2e`).
addopts = "-ra --strict-markers --strict-config -m 'not smoke'"
markers = [
  "integration: spins up the BentoML service in-process; slower",
  "slow: takes more than ~5 seconds",
  "smoke: end-to-end against a running compose stack; requires docker compose up",
]
filterwarnings = [
  "error",
  # statsmodels/sklearn raise a lot of FutureWarnings on the pinned versions
  "ignore::FutureWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",  # bentoml -> multipart -> python_multipart rename
  "ignore::UserWarning",
]
